--- a/platformio.ini
+++ b/platformio.ini
@@ -10,11 +10,16 @@
 
 [env:nodemcu-32s]
 platform = espressif32
-board = nodemcu-32s
+board = esp32dev
 framework = arduino
 monitor_speed = 115200
 monitor_port = COM8
-monitor_filters = log2file, default
+monitor_filters = default
 lib_deps = 
 	bblanchon/ArduinoJson@^6.19.4
 	knolleary/PubSubClient@^2.8
+	; dependencies MPU6050
+	./lib/ei-fall_proyecto-arduino-1.0.7.zip
+	SPI
+	Wire
+	adafruit/Adafruit MPU6050@^2.2.2
