--- a/platformio.ini
+++ b/platformio.ini
@@ -16,10 +16,10 @@ monitor_speed = 115200
 monitor_port = COM8
 monitor_filters = default
 lib_deps = 
-	bblanchon/ArduinoJson@^6.19.4
-	knolleary/PubSubClient@^2.8
-	; dependencies MPU6050
-	./lib/ei-fall_proyecto-arduino-1.0.7.zip
 	SPI
 	Wire
+	bblanchon/ArduinoJson@^6.19.4
+	knolleary/PubSubClient@^2.8
+	oxullo/MAX30100lib@^1.2.1
 	adafruit/Adafruit MPU6050@^2.2.2
+	./lib/ei-fall_proyecto-arduino-1.0.7.zip
