--- a/platformio.ini
+++ b/platformio.ini
@@ -22,4 +22,5 @@ lib_deps =
 	knolleary/PubSubClient@^2.8
 	oxullo/MAX30100lib@^1.2.1
 	adafruit/Adafruit MPU6050@^2.2.2
+	adafruit/Adafruit MLX90614 Library@^2.1.3
 	./lib/ei-fall_proyecto-arduino-1.0.7.zip
