--- a/platformio.ini
+++ b/platformio.ini
@@ -11,9 +11,12 @@
 [env:nodemcu-32s]
 platform = espressif32
 board = esp32dev
+; board_build.ldscript = eagle.flash.4m3m.Id
 framework = arduino
-monitor_speed = 115200
-monitor_port = COM8
+; monitor_speed = 115200
+; monitor_port = COM8
+upload_protocol =espota
+upload_port = 192.168.100.105
 monitor_filters = default
 lib_deps = 
 	SPI
