--- a/platformio.ini
+++ b/platformio.ini
@@ -13,10 +13,10 @@ platform = espressif32
 board = esp32dev
 ; board_build.ldscript = eagle.flash.4m3m.Id
 framework = arduino
-; monitor_speed = 115200
-; monitor_port = COM8
-upload_protocol =espota
-upload_port = 192.168.100.105
+monitor_speed = 115200
+monitor_port = COM8
+; upload_protocol =espota
+; upload_port = 192.168.100.105
 monitor_filters = default
 lib_deps = 
 	SPI
